--- a/config.toml
+++ b/config.toml
@@ -235,3 +235,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
 #  section = ["HTML", "RSS"]
 #  taxonomy = ["HTML", "RSS"]
 #  taxonomyTerm = ["HTML"]
+
+
+[permalinks]         # 固定链接
+post = "/:title.html"
